update implementation section in the tex

--- a/tex/references.bib
+++ b/tex/references.bib
@@ -137,8 +137,8 @@ abstract = {Taking into account various models and findings pertaining to the na
   title        = {Saccades: An R package for detecting fixations in
                    raw eye tracking data
                   },
-  month        = oct,
-  year         = 2015,
+  month        = {oct},
+  year         = {2015},
   publisher    = {Zenodo},
   version      = {v0.1},
   doi          = {10.5281/zenodo.31799},
