edit: remove one more participant as they did not reach 75% of accuracy on unambiguous trials

--- a/analysis/preprocessing_and_init_analysis.ipynb
+++ b/analysis/preprocessing_and_init_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
     "filter_blacklist = True\n",
     "\n",
     "blacklist = ['65ec84d7abc1df34e678abe1', '600a3f4dfab4f005387beff6', '63d1412396ee4fa133b52643', # invalid data \n",
-    "             '6711572aa22f0638a3f67bd6', '672cb407e8fe02325f9515e9', '677551520baf8b896f43f4a2'  # accuracy on unambiguous trials <= 0.5\n",
+    "             '6711572aa22f0638a3f67bd6', '672cb407e8fe02325f9515e9', '677551520baf8b896f43f4a2', '6658c4239af9537eefdfbcc9'  # accuracy on unambiguous trials < 0.75\n",
     "             ]\n",
     "df = pd.read_csv(f'data/raw_data/{df_name}.csv')\n",
     "\n",
@@ -113,23 +113,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(17.65015002615212)"
+       "101"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('data/final_datasets/final_experiment_participants_extended.csv')\n",
-    "df['gazeSamplingRateHz'].mean()"
+    "len(df.workerid.unique())"
    ]
   },
   {
@@ -198,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,14 +347,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17.65015002615212\n"
+      "17.658151686966438\n"
      ]
     }
    ],
@@ -372,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +450,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "2edc0f1a-c1ee-42eb-bee0-d6a82129b589",
+       "ref": "a5ec2acf-3832-475a-ab16-03ceae37d649",
        "rows": [
         [
          "0",
@@ -681,7 +680,7 @@
        "4                 0.397059          0.000000        2   color  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -926,13 +925,13 @@
       "4    58d62c1733fef30001189b75        1.000000     6309.552632\n",
       "5    665336b8da7328bc1558c1f6        1.000000     6331.078947\n",
       "..                        ...             ...             ...\n",
+      "97   66d2190b4f1152adfcdfa82e        0.526316     5656.763158\n",
       "98   651282bee74e48b581f77d04        0.526316     7311.684211\n",
       "99   5f262b3018c68e27aebdd170        0.500000     1693.026316\n",
       "100  612adba08b8235b31539c704        0.500000     2975.131579\n",
       "101  66d4407f31981698998d25d8        0.500000     9279.578947\n",
-      "102  6658c4239af9537eefdfbcc9        0.447368     2801.263158\n",
       "\n",
-      "[102 rows x 3 columns]\n"
+      "[101 rows x 3 columns]\n"
      ]
     }
    ],
@@ -945,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1010,21 +1009,14 @@
     "aoi = ['img1', 'img2', 'img3', 'sent_msg', 'available_msgs']\n",
     "\n",
     "for i in range(len(sample)):\n",
-    "    if i != 4: \n",
-    "        continue\n",
     "    cur_sample = sample.iloc[i]\n",
-    "    print(cur_sample[['timeOnSentMsg', 'timeOnAvailableMsgs', 'timeOnTrgt', 'timeOnDist', 'timeOnComp', 'timeOnNonAOI', 'propTimeOnSentMsg', 'propTimeOnAvailableMsgs', 'propTimeOnTrgt', 'propTimeOnDist', 'propTimeOnComp', 'propTimeOnNonAOI']])\n",
     "    gaze_sample = None\n",
     "    gaze_sample = cur_sample.gaze\n",
     "    x, y = [], []\n",
     "    x = np.array([g['x'] for g in gaze_sample.values()])\n",
     "    y = np.array([g['y'] for g in gaze_sample.values()])\n",
-    "    # print(len(x))\n",
-    "    # print(cur_sample.answerTime)\n",
     "    print(i, cur_sample.type)\n",
-    "    # make a scatterplot on the left and a heatmap on the right, keep proportions of the screen\n",
     "    \n",
-    "    # fig, axs = plt.subplots(1, 2, figsize=(2.2*(resolution[0]*6/resolution[1]), 6))\n",
     "    plt.figure(figsize=(resolution[0]*6/resolution[1], 6))\n",
     "\n",
     "    # make every next point slightly hue color on the plot to represent a scanpath\n",
