fix general typos

--- a/analysis/plots.ipynb
+++ b/analysis/plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,9 +67,9 @@
    "source": [
     "df = pd.read_csv('data/final_datasets/final_experiment_participants_extended.csv')\n",
     "plt.figure(figsize=(6, 6))\n",
-    "x = df['answerAccuracySimple']\n",
+    "x = df['AnswerAccuracySimple']\n",
     "x_rounded = [round(i, 1) for i in x]\n",
-    "y = df['answerAccuracyComplex']\n",
+    "y = df['AnswerAccuracyComplex']\n",
     "y_rounded = [round(i, 1) for i in y]\n",
     "# move the counts to the closest value with 1 digit after the comma for sx\n",
     "s_rounded = np.array(11*[np.array(11*[0])])\n",
