--- a/tex/sections/c0/secondpage.tex
+++ b/tex/sections/c0/secondpage.tex
@@ -14,13 +14,11 @@ Saarbrücken, Germany\\\\
 
 
 \vspace*{2.5cm}
-\textbf{\color{red}  Reviewer 1: ADD THE NAME}\\
-\textbf{\color{red}  Reviewer 2: ADD THE NAME}\\
+\textbf{Reviewer 1: Prof. Dr. Vera Demberg}\\
+\textbf{Reviewer 2: Prof. Dr. Sven Apel}\\
 
 
 \vspace{4.5cm}
-
-\textbf{\color{red}  Disclaimer: We provide this templates for your convenience. As we do not update it regularly, it is your responsibility to ensure that it complies with your examination office's rules. This is especially valid for the declarations that you need to formulate. We have not integrated them in this template on purpose. Please add this on your own, while checking the rest of the template with the current rules.}
 
 
 \vspace{3cm}
