fix typos and add some discussion at the end

--- a/tex/sections/conclusion.tex
+++ b/tex/sections/conclusion.tex
@@ -1,1 +1,7 @@
-﻿\chapter{General Discussion}
+﻿\chapter{Conclusion and General Discussion}
+\label{sec:conclusion}
+
+\section{General Discussion}
+\label{sec:general-discussion}
+
+The way we assigned the fixations to the stimuli is not optimal as we clearly missed the timings of the gaze predictions as well as added some of the gaze points that are from saccades rather than from fixations. Both of the problems could have been solved with a fixation detection algorithm. A more advanced fixation detection algorithm could be implemented in the future to improve the preprocessing part of the data analysis. Currently as was discussed in \autoref{sec:analysis:eyetr} the fixation detection algorithm falls short in the case of low sampling rates that WebGazer demonstrates. The algorithm is not able to detect some of the fixations in the data, which would lead to a loss of information. Therefore, clearly the approach chosen by us in the end is not optimal and could be improved in the future.
