--- a/analysis/plots.ipynb
+++ b/analysis/plots.ipynb
@@ -257,7 +257,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "thesis",
+   "display_name": "ml2024",
    "language": "python",
    "name": "python3"
   },
@@ -271,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
