--- a/tex/sections/implementation.tex
+++ b/tex/sections/implementation.tex
@@ -54,7 +54,7 @@ Furthermore, a performance issue arised during the pilot phase. The issues was t
 
 The calibration is highly dependent on the setup. Hence, the following pieces of advice were given to the participants to increase chances of successful calibration: keep the laptop on charging during the whole experiment (to make sure the eye tracking does not suffer from battery saving features); choose a quiet, well-lit room with minimal distractions and use a stable chair; place your laptop on a stable surface, screen directly in front of you. Later during the calibration, ensure the webcam is centered with your face; keep your head sas still as possible during the experiment; make this window full screen size if not already. In addition, right before the calibration the participants were shown their webcam feed to make sure they are centered and the lighting is good as well as some visual advice on how to improve the calibration. The visuals can be seen in \autoref{fig:calibration_instr}. They were taken from a different experiment \cite{Semmelmann_2018} that was conducted with use of WebGazer \cite{webgazer}.
 
-Even with all the optimizations in place, the calibration procedure was still relatively difficult to pass. The participants were not restricted in number of attempts to calibrate. However, the participants were informed that the approval is only possible after successfully completing the calibration and the rest of the experiment. The resulting rate of successful completions was only around 30\%. However, that resulted in a good quality of data.
+Even with all the optimizations in place, the calibration procedure was still relatively difficult to pass. The participants were not restricted in number of attempts to calibrate. However, the participants were informed that the approval is only possible after successfully completing the calibration and the rest of the experiment.
 
 \subsection{Consent}
 The participants were told about the eye tracking right in the beginning of the experiment. They were informed that no video of them will be stored at any point of time. The participants were informed that they can stop the experiment at any point by exiting the website and none of their data will be saved. The exact formulation was: 
@@ -169,32 +169,31 @@ Similarly to \cite{Vigneau_2006}, we will report the pairwise correlations of ey
 
 The main analysis will be done using mixed effects logistic regressions. The models are designed to correspond to our hypothesis presented in \autoref{sec:research_questions}. For the hypothesis 1 and 2, the following model was preregistered:
 \begin{verbatim}
-    AnswerCorrect ~ Condition + TrgtPosition + Trial + 
+    Correct ~ Condition + TrgtPos + Trial + 
     PropTimeOnTrgt + PropTimeOnComp + PropTimeOnDist + 
     PropTimeOnSentMsg + PropTimeOnAvailableMsgs + 
     PropTimeOnNonAOI + MsgType +
-    (1 + Condition + TrgtPosition + Trial + PropTimeOnTrgt + 
+    (1 + Condition + TrgtPos + Trial + PropTimeOnTrgt + 
     PropTimeOnComp + PropTimeOnDist + PropTimeOnSentMsg + 
     PropTimeOnAvailableMsgs + MsgType | Subject)
 \end{verbatim}
 
-However, we quickly realized that the model is missing interaction between the condition of the trial and the eye tracking features. The interaction is important because the first two hypothesis are based on the differences of the accuracy and eye tracking feature based on different trial conditions. Therefore the starting model for the first two hypothesis was changed to the following:
+However, we quickly realized that the model has a few issues. First of all, the model is missing interaction between the different conditions and the eye tracking features. Therefore, the interaction terms were added to the model. The second issue is that the feature `PropTimeOnNonAOI' can be derived from the other eye tracking features making it redundant and unnecessary to include in the model, hence, it was removed. In addition, we added the `AnswerTime' feature to the model. The `AnswerTime' feature is the time between the start of the trial and the moment when the participant clicked on the answer. It was added to account for the fact that some participants might have been faster than others. The final starting model looks as follows:
 
 \begin{verbatim}
-    AnswerCorrect ~ Condition + TrgtPosition + Trial + 
+    Correct ~ Condition + TrgtPos + Trial + 
     PropTimeOnTrgt + PropTimeOnComp + PropTimeOnDist + 
-    PropTimeOnSentMsg + PropTimeOnAvailableMsgs + 
-    PropTimeOnNonAOI + MsgType +
+    PropTimeOnSentMsg + PropTimeOnAvailableMsgs + MsgType +
+    AnswerTime +
     Condition:PropTimeOnTrgt + Condition:PropTimeOnComp +
     Condition:PropTimeOnDist + Condition:PropTimeOnSentMsg +
-    Condition:PropTimeOnAvailableMsgs + 
-    Condition:PropTimeOnNonAOI +
-    (1 + Condition + TrgtPosition + Trial + PropTimeOnTrgt + 
+    Condition:PropTimeOnAvailableMsgs + Condition:AnswerTime +
+    (1 + Condition + TrgtPos + Trial + PropTimeOnTrgt + 
     PropTimeOnComp + PropTimeOnDist + PropTimeOnSentMsg + 
     PropTimeOnAvailableMsgs + MsgType | Subject)
 \end{verbatim}
 
-Through this model we will be able to test the first two hypothesis. Mainly whether the distractor is positively associated with the accuracy on the complex trials. And, for the second hypothesis, whether the available messages become important on the simple trial comparing to unambiguous and maybe complex as well. The model will be fit on the trial level and predicts whether the answer was correct or not. The `Trial' feature was rescaled to be between 0 and 1, in order to match the scale of other features.
+Through this model we will be able to test the first two hypothesis. Mainly whether the distractor is positively associated with the accuracy on the complex trials. And, for the second hypothesis, whether the available messages become important on the simple trial comparing to unambiguous and maybe complex as well. The model will be fit on the trial level and predicts whether the answer was correct or not. The `Trial' and `AnswerTime' features was rescaled to be between -1 and 1, in order to match the scale of other features. All the eye tracking features were centered to have mean 0 but not scaled. This approach was chosen because it would make the interpretability of the models easier.
 
 As for the third and fourth hypothesis, each of them will be tested using a separate model. Both of them predict whether a gaze point was on a certain area of interest. Hence, the data to fit them is made on the fixation level. Only the gaze points from the correctly solved trials were added to the data to match the hypothesis. The third hypothesis will be tested using the following model:
 \begin{verbatim}
