--- a/tex/sections/userstudy.tex
+++ b/tex/sections/userstudy.tex
@@ -1,1 +1,106 @@
 ﻿\chapter{Results}
+\label{chap:results}
+
+\section{General Information}
+\label{sec:general_info}
+In total there were 120 participants in the study who made a submission according to Prolific. 12 were removed due to technical issues with the submissions, either their submission were not received due to technical issues or they actually did not fully complete the experiment. Another 3 were removed due to having missing data in some of the trials and another 4 were removed due to having accuracy on unambiguous trials below 75\% according to our preregistration. This left us with 101 participants for the analysis. 
+
+It is worth noting that due to the nature of the experiment, the calibration was difficult to pass, making the experiment difficult to complete. 120 participants completed the experiment, however, the were around 150 submission attempts that were not completed. This mainly happened because of the calibration difficulties according to some of the participants feedback. This information gives us an idea about the completion rate of the experiment, which amounted at around 30\%. However, this allowed us to collect a large amount of good quality data, which is the most important aspect of the experiment.
+
+
+\section{Pairwise Correlations}
+\label{sec:pairwise_corr}
+
+\section{Mixed Effects Logistic Regressions}
+\label{sec:mixed_effects_models}
+Due to the complexity of the models, the models had issues converging. Therefore, the random effects were removed one by one from the models based on the least variance among the random effects. The process was repeated until the models converged. In the case of predicting accuracy, the random effects were removed from the model entirely. 
+
+
+\subsection{Predicting Accuracy}
+\label{sec:accuracy_model}
+
+The final formula for the model predicting accuracy was:
+\begin{verbatim}
+    Correct ~ Condition + TrgtPos + Trial + PropTimeOnTrgt +
+    PropTimeOnComp + PropTimeOnDist + PropTimeOnSentMsg + 
+    PropTimeOnAvailableMsgs + MsgType + AnswerTime + 
+    Condition:PropTimeOnTrgt + Condition:PropTimeOnComp +
+    Condition:PropTimeOnDist + Condition:PropTimeOnSentMsg +
+    Condition:PropTimeOnAvailableMsgs + Condition:AnswerTime
+\end{verbatim}
+The model had the following encodings for the categorical variables \autoref{tab:msgtype_encoding}, \autoref{tab:trgtpos_encoding} and \autoref{tab:condition_encoding}. The target position can be interpreted as comparing left to the center and right to the center for features `TrgtPos2` and `TrgtPos3` respectively. The condition can be interpreted as comparing the simple condition to the complex condition and the unambiguous condition to the simple and complex conditions together. The model was trained using the \texttt{lme4} package in R. The model was trained using the \texttt{glm} function with the following parameters: \texttt{family = binomial(link = "logit")}. The resulting coefficients can be seen at \autoref{tab:model_coefficients_acc}.
+\begin{table}[h!]
+\centering
+\begin{tabular}{|c|c|}
+\hline
+Message Type & Encoding \\ \hline
+Shape        & -1       \\ \hline
+Color        & 1        \\ \hline
+\end{tabular}
+\caption{Encoding of the message type categorical variable.}
+\label{tab:msgtype_encoding}
+\end{table}
+\hfill
+\begin{table}[h!]
+\centering
+\begin{tabular}{|c|c|c|c|}
+\hline
+Target Position & TrgtPos2 & TrgtPos3\\ \hline
+0               & 1    & 0    \\ \hline
+1               & 0    & 0    \\ \hline
+2               & 0    & 1    \\ \hline
+\end{tabular}
+\caption{Encoding of the target position categorical variable.}
+\label{tab:trgtpos_encoding}
+\end{table}
+\begin{table}[h!]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+Condition     & Condition1 & Condition2 \\ \hline
+Complex       & -1   & -1   \\ \hline
+Simple        & 1    & -1   \\ \hline
+Unambiguous   & 0    & 2    \\ \hline
+\end{tabular}
+\caption{Encoding of the condition categorical variable.}
+\label{tab:condition_encoding}
+\end{table}
+
+
+
+\begin{table}[h!]
+\centering
+\begin{tabular}{|l|c|c|c|c|}
+\hline
+\textbf{Coefficient} & \textbf{Estimate} & \textbf{Std. Error} & \textbf{z value} & \textbf{Pr(>|z|)} \\ \hline
+(Intercept)                          & 1.23265 & 0.18460 & 6.677 & 2.43e-11 *** \\ \hline
+Condition1                           & 0.22087 & 0.05499 & 4.017 & 5.91e-05 *** \\ \hline
+Condition2                           & 1.10938 & 0.14302 & 7.757 & 8.69e-15 *** \\ \hline
+TrgtPos2                             & 1.92305 & 0.21183 & 9.078 & < 2e-16 *** \\ \hline
+TrgtPos3                             & 1.69844 & 0.20450 & 8.305 & < 2e-16 *** \\ \hline
+Trial                                & 0.22635 & 0.04825 & 4.691 & 2.72e-06 *** \\ \hline
+PropTimeOnTrgt                      & -6.09992 & 6.15675 & -0.991 & 0.3218 \\ \hline
+PropTimeOnComp                     & -12.92581 & 6.16769 & -2.096 & 0.0361 * \\ \hline
+PropTimeOnDist                     & -11.95582 & 6.14733 & -1.945 & 0.0518 . \\ \hline
+PropTimeOnSentMsg                   & -9.95567 & 6.06806 & -1.641 & 0.1009 \\ \hline
+PropTimeOnAvailableMsgs             & -8.69726 & 6.27784 & -1.385 & 0.1659 \\ \hline
+MsgType1                            & -0.11506 & 0.04888 & -2.354 & 0.0186 * \\ \hline
+AnswerTime                          & -0.12537 & 0.05186 & -2.418 & 0.0156 * \\ \hline
+Condition1:PropTimeOnTrgt           & -1.93730 & 1.09696 & -1.766 & 0.0774 . \\ \hline
+Condition2:PropTimeOnTrgt          & -12.13074 & 6.12982 & -1.979 & 0.0478 * \\ \hline
+Condition1:PropTimeOnComp           & -1.30711 & 1.08177 & -1.208 & 0.2269 \\ \hline
+Condition2:PropTimeOnComp          & -11.30869 & 6.12510 & -1.846 & 0.0649 . \\ \hline
+Condition1:PropTimeOnDist           & -1.13168 & 1.08619 & -1.042 & 0.2975 \\ \hline
+Condition2:PropTimeOnDist          & -12.16270 & 6.10435 & -1.992 & 0.0463 * \\ \hline
+Condition1:PropTimeOnSentMsg        & -0.97657 & 1.09161 & -0.895 & 0.3710 \\ \hline
+Condition2:PropTimeOnSentMsg       & -10.26290 & 6.03306 & -1.701 & 0.0889 . \\ \hline
+Condition1:PropTimeOnAvailableMsgs   & 0.70963 & 1.13710 & 0.624 & 0.5326 \\ \hline
+Condition2:PropTimeOnAvailableMsgs & -12.08512 & 6.24131 & -1.936 & 0.0528 . \\ \hline
+Condition1:AnswerTime               & -0.11566 & 0.05769 & -2.005 & 0.0450 * \\ \hline
+Condition2:AnswerTime               & -0.02166 & 0.03973 & -0.545 & 0.5856 \\ \hline
+\end{tabular}
+\caption{Summary of the trained model coefficients. Significance codes: 0 '***', 0.001 '**', 0.01 '*', 0.05 '.', 0.1 ' ', 1.}
+\label{tab:model_coefficients_acc}
+\end{table}
+
+The first hypothesis we wanted to test was that Proportional time on distractor is positively associated with accuracy on Complex trials \autoref{sec:h1}. The coefficient for the `Condition1:PropTimeOnDist' indicates that the proportional time on distractor is positively associated with accuracy on Complex trials. However, the coefficient is not significant. Hence, the hypothesis is not supported. On the other hand, the coefficient for the `Condition2:PropTimeOnDist' indicates that the proportional time on distractor is negatively associated with accuracy on Unambiguous trials comparing to Simple and Complex. 
