--- a/tex/sections/userstudy.tex
+++ b/tex/sections/userstudy.tex
@@ -103,4 +103,17 @@ Condition2:AnswerTime               & -0.02166 & 0.03973 & -0.545 & 0.5856 \\ \h
 \label{tab:model_coefficients_acc}
 \end{table}
 
-The first hypothesis we wanted to test was that Proportional time on distractor is positively associated with accuracy on Complex trials \autoref{sec:h1}. The coefficient for the `Condition1:PropTimeOnDist' indicates that the proportional time on distractor is positively associated with accuracy on Complex trials. However, the coefficient is not significant. Hence, the hypothesis is not supported. On the other hand, the coefficient for the `Condition2:PropTimeOnDist' indicates that the proportional time on distractor is negatively associated with accuracy on Unambiguous trials comparing to Simple and Complex. 
+The first hypothesis we wanted to test was that Proportional time on distractor is positively associated with accuracy on Complex trials \autoref{sec:h1}. Even though the coefficient for the interaction term `Condition1:PropTimeOnDist' is not significant, due to how interaction terms work, we can still interpret how model prediction changes based on the value of the interaction term. First of all, we can take a look at \aturef{tab:proptimeondist_trends} which shows the trends of the Proportional time on distractor for each condition. As well as the plot \autoref{fig:proptimeondist_trends} which visualizes the trends of the Proportional time on distractor for each condition. In both cases the trends were transformed back to probabilities from log odds. 
+
+\begin{table}[h!]
+\centering
+\begin{tabular}{|c|c|c|c|c|}
+\hline
+\textbf{Condition} & \textbf{PropTimeOnDist.trend} & \textbf{SE} & \textbf{asymp.LCL} & \textbf{asymp.UCL} \\ \hline
+Complex            & 0.227                         & 0.248       & -0.260            & 0.714             \\ \hline
+Simple             & -0.132                        & 0.233       & -0.588            & 0.324             \\ \hline
+Unambiguous        & -0.496                        & 0.189       & -0.866            & -0.125            \\ \hline
+\end{tabular}
+\caption{Summary of PropTimeOnDist trends by condition.}
+\label{tab:proptimeondist_trends}
+\end{table}
