update: analysis to generate correlation csvs and update results chapter in tex

--- a/analysis/plots.ipynb
+++ b/analysis/plots.ipynb
@@ -235,23 +235,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.2372507474245203 0.16799048062650618 0.14411484913226 0.33557285305515583 0.09273345945792269\n",
-      "0.24255927421071585 0.11759159210614153 0.1206438230799562 0.46496866020516303 0.030836652443818523\n"
+      "0.9867986798679867\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv('data/final_datasets/final_experiment_trials.csv')\n",
-    "print(df['PropTimeOnTrgt'].mean(), df['PropTimeOnComp'].mean(), df['PropTimeOnDist'].mean(), df['PropTimeOnSentMsg'].mean(), df['PropTimeOnAvailableMsgs'].mean())\n",
     "df = df[df['Condition'] == 'unambiguous']\n",
-    "print(df['PropTimeOnTrgt'].mean(), df['PropTimeOnComp'].mean(), df['PropTimeOnDist'].mean(), df['PropTimeOnSentMsg'].mean(), df['PropTimeOnAvailableMsgs'].mean())"
+    "print(df['Correct'].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conditions = ['simple', 'complex']\n",
+    "rows = ['PropTimeOnSentMsg', 'PropTimeOnTrgt', 'PropTimeOnComp', 'PropTimeOnDist', 'PropTimeOnAvailableMsgs', 'PropTimeOnNonAOI']\n",
+    "\n",
+    "def stars(p):\n",
+    "    p_stars = ''\n",
+    "    if p <= 0.05:\n",
+    "        p_stars = '*'\n",
+    "    if p <= 0.01:\n",
+    "        p_stars = '**'\n",
+    "    if p <= 0.001:\n",
+    "        p_stars = '***'\n",
+    "    return p_stars\n",
+    "\n",
+    "\n",
+    "for condition in conditions:\n",
+    "    df = pd.read_csv('data/final_datasets/final_experiment_participants.csv')\n",
+    "    df = df[df['Condition'] == condition]\n",
+    "    df.drop(['Subject', 'Condition'], inplace=True, axis=1)\n",
+    "    corr_df = pd.DataFrame()\n",
+    "    corr_df['Mean'] = df.mean(axis=0).transpose().round(2)\n",
+    "    corr_df['SD'] = df.std(axis=0).transpose().round(2)\n",
+    "    corr_df['Accuracy'] = df.apply(lambda x: stats.pearsonr(x, df['AnswerAccuracy'])[0], axis=0).round(2)\n",
+    "    corr_df['Accuracy_p'] = df.apply(lambda x: stats.pearsonr(x, df['AnswerAccuracy'])[1], axis=0)\n",
+    "    corr_df['Accuracy_p_stars'] = corr_df['Accuracy_p'].apply(stars)\n",
+    "    corr_df['MeanAnswerTime'] = df.apply(lambda x: stats.pearsonr(x, df['MeanAnswerTime'])[0], axis=0).round(2)\n",
+    "    corr_df['MeanAnswerTime_p'] = df.apply(lambda x: stats.pearsonr(x, df['MeanAnswerTime'])[1], axis=0)\n",
+    "    corr_df['MeanAnswerTime_p_stars'] = corr_df['MeanAnswerTime_p'].apply(stars)\n",
+    "    corr_df.rename_axis('Feature', inplace=True)\n",
+    "    corr_df.to_csv(f'data/final_datasets/final_experiment_participants_corr_{condition}.csv')"
    ]
   }
  ],
