--- a/tex/sections/concept.tex
+++ b/tex/sections/concept.tex
@@ -17,7 +17,9 @@ As we discussed in \autoref{sec:rsa}, the distractor in the hypothesis is a cruc
 
 \subsubsection{Research Hypothesis 2}
 \label{sec:h2}
-The second research question is about the messages that are available to the participants. The second research hypothesis is H2: Proportional time on available messages is positively associated with accuracy on Simple trials. This hypothesis is mainly based on the idea that while the unambiguous trials can be solved without considering the available messages, the simple ones require one to consider the available messages. In addition, the Complex trials can be solved without looking at the available messages.
+The second research question is about the messages that are available to the participants. The second research hypothesis is H2: Proportional time on available messages is positively associated with accuracy on Simple trials. This hypothesis is mainly based on the idea that while the unambiguous trials can be solved without considering the available messages, the simple ones require one to consider the available messages.
+
+In addition, the Complex trials can be solved without looking at the available messages at all. Take for example the trial in \autoref{fig:complex}. Taking into account the availalbe messages the following correspondance can be built: circle -- competitor (blue circle), square -- distractor (green square) and blue -- target (blue square). However, if one does not consider the available messages, they can build a similar correspondence: circle -- competitor (blue circle), green -- distractor(green square) and blue or square -- target (blue square). In both cases the message blue corresponds to the target.
 
 \subsection{Estimating the Likelihood}
 \label{sec:likelihood}
