--- a/analysis/preprocessing_and_init_analysis.ipynb
+++ b/analysis/preprocessing_and_init_analysis.ipynb
@@ -1710,7 +1710,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "thesis",
+   "display_name": "ml2024",
    "language": "python",
    "name": "python3"
   },
@@ -1724,7 +1724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
